force-app/main/default/objects/Practitioner__c/Practitioner__c.object-meta.xml
<CustomObject>
    <label>Practitioner</label>
    <nameField>
        <label>Practitioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practitioners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>