force-app/main/default/objects/Practitioner__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <externalId>true</externalId>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>