force-app/main/default/objects/Practitioner__c/fields/Taxonomy_Code__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Code__c</fullName>
    <label>Taxonomy Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>