force-app/main/default/objects/Practitioner__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Practitioners</relationshipLabel>
    <relationshipName>Practitioners</relationshipName>
    <type>Lookup</type>
</CustomField>