force-app/main/default/objects/Practitioner__c/listViews/Active_Practitioners.listView-meta.xml
<ListView>
    <fullName>Active_Practitioners</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>NPI__c</columns>
    <columns>Specialty__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Practitioners</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>