force-app/main/default/objects/Practitioner__c/listViews/All_Practitioners.listView-meta.xml
<ListView>
    <fullName>All_Practitioners</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>NPI__c</columns>
    <columns>Specialty__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Practitioners</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>